@@ -23,7 +23,6 @@
 			<label index="seminars.pi_flexform.my_entered_events">Events which I have entered</label>
 			<label index="seminars.pi_flexform.countdown">Countdown to the next event</label>
 			<label index="seminars.pi_flexform.category_list">Category List</label>
-			<label index="seminars.pi_flexform.baseURL">Base URL of this Typo3 site, e.g. http://www.mytypo3site.net/:</label>
 			<label index="seminars.pi_flexform.listPID">Page that contains the seminar list:</label>
 			<label index="seminars.pi_flexform.detailPID">Page that contains the detailed view:</label>
 			<label index="seminars.pi_flexform.myEventsPID">Page that contains the &quot;my events&quot; list:</label>
@@ -401,7 +400,6 @@
 			<label index="seminars.pi_flexform.my_entered_events">Arrangementer som jeg er tilmeldt</label>
 			<label index="seminars.pi_flexform.countdown">Nedtælling til næste arrangement</label>
 			<label index="seminars.pi_flexform.category_list">Kategori liste</label>
-			<label index="seminars.pi_flexform.baseURL">Base URL for dette Typo3 site, e.g. http://www.mittypo3site.dk/ (husk den sidste &quot;/&quot;):</label>
 			<label index="seminars.pi_flexform.listPID">Side der indeholder liste over arrangementer:</label>
 			<label index="seminars.pi_flexform.detailPID">Side der viser et enkelt arrangement:</label>
 			<label index="seminars.pi_flexform.myEventsPID">Side der viser &quot;mine arrangementer&quot; listen:</label>
@@ -624,7 +622,6 @@
 			<label index="seminars.pi_flexform.my_entered_events">Veranstaltungen, die ich eingegeben habe</label>
 			<label index="seminars.pi_flexform.countdown">Countdown zur nächsten Veranstaltung</label>
 			<label index="seminars.pi_flexform.category_list">Kategorienliste</label>
-			<label index="seminars.pi_flexform.baseURL">Basis-URL dieser Typo3-Site, z.B. http://www.mytypo3site.net/:</label>
 			<label index="seminars.pi_flexform.listPID">Seite mit der Seminarliste:</label>
 			<label index="seminars.pi_flexform.detailPID">Seite mit der Detailansicht:</label>
 			<label index="seminars.pi_flexform.myEventsPID">Seite mit der &quot;Meine Veranstaltungen&quot;-Liste:</label>
@@ -1002,7 +999,6 @@
 			<label index="seminars.pi_flexform.my_entered_events">Evenementen die ik heb ingevoerd</label>
 			<label index="seminars.pi_flexform.countdown">Aftellen naar het volgende evenement</label>
 			<label index="seminars.pi_flexform.category_list">Categorie lijst</label>
-			<label index="seminars.pi_flexform.baseURL">Basis URL van deze TYPO3 site, bijv. http://www.mytypo3site.net/:</label>
 			<label index="seminars.pi_flexform.listPID">Pagina die de seminarlijst bevat:</label>
 			<label index="seminars.pi_flexform.detailPID">Pagina die de details bevat:</label>
 			<label index="seminars.pi_flexform.myEventsPID">Pagina die de Mijn evenementenlijst bevat:</label>
@@ -1225,7 +1221,6 @@
 			<label index="seminars.pi_flexform.my_entered_events">Мероприятия, которые я посетил</label>
 			<label index="seminars.pi_flexform.countdown">Обратный отсчет до следующего мероприятия</label>
 			<label index="seminars.pi_flexform.category_list">Список категорий</label>
-			<label index="seminars.pi_flexform.baseURL">URL этого сайта, например http://www.mysite.ru/:</label>
 			<label index="seminars.pi_flexform.listPID">Страница со списком семинаров:</label>
 			<label index="seminars.pi_flexform.detailPID">Страница с полным описанием семинара:</label>
 			<label index="seminars.pi_flexform.myEventsPID">Страница со списком &quot;Моих мероприятий&quot;</label>
@@ -1447,7 +1442,6 @@
 			<label index="seminars.pi_flexform.my_entered_events">Eventi che ho inserito</label>
 			<label index="seminars.pi_flexform.countdown">Countdown al prossimo evento</label>
 			<label index="seminars.pi_flexform.category_list">Lista categorie</label>
-			<label index="seminars.pi_flexform.baseURL">Base URL per questo sito TYPO3, per es. http://www.mytypo3site.net/:</label>
 			<label index="seminars.pi_flexform.listPID">Pagina che contiene la lista dei seminari:</label>
 			<label index="seminars.pi_flexform.detailPID">Pagina che contiene la vista di dettaglio:</label>
 			<label index="seminars.pi_flexform.myEventsPID">Pagina che contiene la lista dei miei eventi:</label>
@@ -1670,7 +1664,6 @@
 			<label index="seminars.pi_flexform.my_entered_events">Evénements que j'ai saisis</label>
 			<label index="seminars.pi_flexform.countdown">Compte à rebours jusqu'au prochain événement</label>
 			<label index="seminars.pi_flexform.category_list">Liste des catégories</label>
-			<label index="seminars.pi_flexform.baseURL">URL de base de ce site TYPO3, par exemple http://www.monsitetypo3.com/:</label>
 			<label index="seminars.pi_flexform.listPID">Page qui contient la liste des séminaires:</label>
 			<label index="seminars.pi_flexform.detailPID">Page qui contient la vue de détail:</label>
 			<label index="seminars.pi_flexform.myEventsPID">Page qui contient la liste de &quot;mes événements&quot;:</label>
@@ -1896,7 +1889,6 @@
 			<label index="seminars.pi_flexform.seminar_registration" type="integer">146873320</label>
 			<label index="seminars.pi_flexform.list_registrations" type="integer">258526278</label>
 			<label index="seminars.pi_flexform.list_vip_registrations" type="integer">4335826</label>
-			<label index="seminars.pi_flexform.baseURL" type="integer">34786539</label>
 			<label index="seminars.pi_flexform.listPID" type="integer">227592545</label>
 			<label index="seminars.pi_flexform.registerPID" type="integer">266659950</label>
 			<label index="seminars.pi_flexform.loginPID" type="integer">140600031</label>
@@ -2118,7 +2110,6 @@
 			<label index="seminars.pi_flexform.my_entered_events" type="integer">100155450</label>
 			<label index="seminars.pi_flexform.countdown" type="integer">104673252</label>
 			<label index="seminars.pi_flexform.category_list" type="integer">68970858</label>
-			<label index="seminars.pi_flexform.baseURL" type="integer">34786539</label>
 			<label index="seminars.pi_flexform.listPID" type="integer">227592545</label>
 			<label index="seminars.pi_flexform.detailPID" type="integer">252951912</label>
 			<label index="seminars.pi_flexform.myEventsPID" type="integer">58335550</label>
@@ -2488,7 +2479,6 @@
 			<label index="seminars.pi_flexform.seminar_list" type="integer">98496595</label>
 			<label index="seminars.pi_flexform.my_events" type="integer">25497076</label>
 			<label index="seminars.pi_flexform.seminar_registration" type="integer">146873320</label>
-			<label index="seminars.pi_flexform.baseURL" type="integer">34786539</label>
 			<label index="seminars.pi_flexform.listPID" type="integer">227592545</label>
 			<label index="seminars.pi_flexform.registerPID" type="integer">266659950</label>
 			<label index="seminars.pi_flexform.loginPID" type="integer">140600031</label>
@@ -2718,7 +2708,6 @@
 			<label index="seminars.pi_flexform.event_editor" type="integer">243089187</label>
 			<label index="seminars.pi_flexform.my_entered_events" type="integer">100155450</label>
 			<label index="seminars.pi_flexform.countdown" type="integer">104673252</label>
-			<label index="seminars.pi_flexform.baseURL" type="integer">34786539</label>
 			<label index="seminars.pi_flexform.listPID" type="integer">227592545</label>
 			<label index="seminars.pi_flexform.detailPID" type="integer">252951912</label>
 			<label index="seminars.pi_flexform.registerPID" type="integer">266659950</label>
@@ -2940,7 +2929,6 @@
 			<label index="seminars.pi_flexform.event_editor" type="integer">243089187</label>
 			<label index="seminars.pi_flexform.my_entered_events" type="integer">100155450</label>
 			<label index="seminars.pi_flexform.countdown" type="integer">104673252</label>
-			<label index="seminars.pi_flexform.baseURL" type="integer">34786539</label>
 			<label index="seminars.pi_flexform.listPID" type="integer">227592545</label>
 			<label index="seminars.pi_flexform.detailPID" type="integer">252951912</label>
 			<label index="seminars.pi_flexform.registerPID" type="integer">266659950</label>
@@ -3163,7 +3151,6 @@
 			<label index="seminars.pi_flexform.event_editor" type="integer">243089187</label>
 			<label index="seminars.pi_flexform.my_entered_events" type="integer">100155450</label>
 			<label index="seminars.pi_flexform.countdown" type="integer">104673252</label>
-			<label index="seminars.pi_flexform.baseURL" type="integer">34786539</label>
 			<label index="seminars.pi_flexform.listPID" type="integer">227592545</label>
 			<label index="seminars.pi_flexform.detailPID" type="integer">252951912</label>
 			<label index="seminars.pi_flexform.registerPID" type="integer">266659950</label>
@@ -3389,7 +3376,6 @@
 			<label index="seminars.pi_flexform.my_entered_events">Events which I have entered</label>
 			<label index="seminars.pi_flexform.countdown">Countdown to the next event</label>
 			<label index="seminars.pi_flexform.category_list">Category List</label>
-			<label index="seminars.pi_flexform.baseURL">Base URL of this Typo3 site, e.g. http://www.mytypo3site.net/:</label>
 			<label index="seminars.pi_flexform.listPID">Page that contains the seminar list:</label>
 			<label index="seminars.pi_flexform.detailPID">Page that contains the detailed view:</label>
 			<label index="seminars.pi_flexform.myEventsPID">Page that contains the &quot;my events&quot; list:</label>
@@ -3762,7 +3748,6 @@
 			<label index="seminars.pi_flexform.seminar_registration">Event Registration</label>
 			<label index="seminars.pi_flexform.list_registrations">List of Registrations (for attendees)</label>
 			<label index="seminars.pi_flexform.list_vip_registrations">List of Registrations (for VIPs)</label>
-			<label index="seminars.pi_flexform.baseURL">Base URL of this Typo3 site, e.g. http://www.mytypo3site.net/:</label>
 			<label index="seminars.pi_flexform.listPID">Page that contains the seminar list:</label>
 			<label index="seminars.pi_flexform.registerPID">Page that contains the event registration form:</label>
 			<label index="seminars.pi_flexform.loginPID">Page that contains the login form:</label>
@@ -3989,7 +3974,6 @@
 			<label index="seminars.pi_flexform.event_editor">Event Editor</label>
 			<label index="seminars.pi_flexform.my_entered_events">Events which I have entered</label>
 			<label index="seminars.pi_flexform.countdown">Countdown to the next event</label>
-			<label index="seminars.pi_flexform.baseURL">Base URL of this Typo3 site, e.g. http://www.mytypo3site.net/:</label>
 			<label index="seminars.pi_flexform.listPID">Page that contains the seminar list:</label>
 			<label index="seminars.pi_flexform.detailPID">Page that contains the detailed view:</label>
 			<label index="seminars.pi_flexform.registerPID">Page that contains the event registration form:</label>
@@ -4211,7 +4195,6 @@
 			<label index="seminars.pi_flexform.event_editor">Event Editor</label>
 			<label index="seminars.pi_flexform.my_entered_events">Events which I have entered</label>
 			<label index="seminars.pi_flexform.countdown">Countdown to the next event</label>
-			<label index="seminars.pi_flexform.baseURL">Base URL of this Typo3 site, e.g. http://www.mytypo3site.net/:</label>
 			<label index="seminars.pi_flexform.listPID">Page that contains the seminar list:</label>
 			<label index="seminars.pi_flexform.detailPID">Page that contains the detailed view:</label>
 			<label index="seminars.pi_flexform.registerPID">Page that contains the event registration form:</label>
@@ -4434,7 +4417,6 @@
 			<label index="seminars.pi_flexform.event_editor">Event Editor</label>
 			<label index="seminars.pi_flexform.my_entered_events">Events which I have entered</label>
 			<label index="seminars.pi_flexform.countdown">Countdown to the next event</label>
-			<label index="seminars.pi_flexform.baseURL">Base URL of this Typo3 site, e.g. http://www.mytypo3site.net/:</label>
 			<label index="seminars.pi_flexform.listPID">Page that contains the seminar list:</label>
 			<label index="seminars.pi_flexform.detailPID">Page that contains the detailed view:</label>
 			<label index="seminars.pi_flexform.registerPID">Page that contains the event registration form:</label>
@@ -4657,7 +4639,6 @@
 			<label index="seminars.pi_flexform.event_editor">Event Editor</label>
 			<label index="seminars.pi_flexform.my_entered_events">Events which I have entered</label>
 			<label index="seminars.pi_flexform.countdown">Countdown to the next event</label>
-			<label index="seminars.pi_flexform.baseURL">Base URL of this Typo3 site, e.g. http://www.mytypo3site.net/:</label>
 			<label index="seminars.pi_flexform.listPID">Page that contains the seminar list:</label>
 			<label index="seminars.pi_flexform.detailPID">Page that contains the detailed view:</label>
 			<label index="seminars.pi_flexform.registerPID">Page that contains the event registration form:</label>
