@@ -66,7 +66,6 @@ Version 0.8.0 - "Make it nice for developers": code clean-up, qa and documentati
 - refactor seminar->createSingleView() so that is a *lot* shorter and better to read
 - check if the first parameter from the seminar constructor (the registration manager) is needed at all
 - use the wec_people Framework for most address data http://wiki.typo3.org/index.php/Partner_Framework
-- investigate whether we can drop the plugin.tx_seminars_pi1.baseURL parameter as sr_feuser_register seems to do without it quite well
 - replace all occurances of ")tab*{" with ")space{" (also in oelib)
 - move most of the registrations list from pi1 to the seminar class (where it belongs)
 - reduce calls like $this->...->isLoggedIn() to $this->isLoggedIn() if possible
