@@ -1,4 +1,5 @@
 0.9.0 (currently working on)
+- [#872] Cleanup: Drop all references to the the seminars baseURL configuration
 - [#3679] Fix: Update all PEAR and emogrifier classes to the latest versions
 - [#3650] Fix: Objects overwrite/delete each other's configuration arrays
 - [#3680] Fix: Don't send the e-mails to the attendees if the FE user's e-mail address is empty
